<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16">

    <ImageView
        android:id="@+id/error_no_root_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_no_root"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/error_no_root_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_no_root_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_no_root_title"
        android:paddingTop="@dimen/padding_16"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.DiscoverKiller"
        app:layout_constraintBottom_toTopOf="@id/error_no_root_desc"
        app:layout_constraintTop_toBottomOf="@id/error_no_root_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/error_no_root_desc"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.DiscoverKiller"
        android:text="@string/error_no_root_desc"
        android:paddingTop="@dimen/padding_16"
        app:layout_constraintTop_toBottomOf="@id/error_no_root_title"
        app:layout_constraintBottom_toTopOf="@id/error_no_root_retry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/error_no_root_retry"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:minWidth="150dp"
        android:text="@string/error_retry"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.DiscoverKiller.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_no_root_desc"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>