<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_16"
    android:background="@drawable/background_settings_snapshot_preview"
    android:paddingTop="@dimen/padding_16"
    android:paddingBottom="@dimen/padding_16">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:paddingBottom="@dimen/padding_16"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/item_settings_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.DiscoverKiller"
        android:text="@string/overlay_choose"/>

    <com.kieronquinn.app.discoverkiller.ui.views.ClickableFrameLayout
        android:id="@+id/item_settings_overlay_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toStartOf="@id/item_settings_overlay_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_settings_title">

        <include
            android:clickable="false"
            android:focusable="false"
            android:id="@+id/item_settings_overlay_custom_container"
            layout="@layout/include_overlay_preview" />

    </com.kieronquinn.app.discoverkiller.ui.views.ClickableFrameLayout>

    <com.kieronquinn.app.discoverkiller.ui.views.ClickableFrameLayout
        android:id="@+id/item_settings_overlay_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_settings_overlay_custom"
        app:layout_constraintTop_toBottomOf="@id/item_settings_title">

        <include
            android:clickable="false"
            android:focusable="false"
            android:id="@+id/item_settings_overlay_app_container"
            layout="@layout/include_overlay_preview" />

    </com.kieronquinn.app.discoverkiller.ui.views.ClickableFrameLayout>

    <Space
        android:id="@+id/item_settings_overlay_space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_16"
        app:layout_constraintTop_toBottomOf="@id/item_settings_overlay_custom" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:minWidth="@dimen/tab_min_width"
        android:layout_height="56dp"
        android:layout_margin="@dimen/padding_16"
        android:id="@+id/item_settings_overlay_tabs"
        android:background="@drawable/background_settings_tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_settings_overlay_space"
        app:tabIndicator="@drawable/indicator_settings_tabs"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorHeight="56dp"
        app:tabSelectedTextColor="?android:textColorPrimaryInverse"
        app:tabTextAppearance="@style/TextAppearance.Tabs"
        app:tabTextColor="@android:color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overlay_custom" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overlay_app" />

    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>